ext-rbac-tls/cp-bootstraps.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: schemaregistry
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: schemaregistry
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: schemaregistry-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: schemaregistry
    type: schemaregistry
    component: schemaregistry-bootstrap
spec:
  ports:
    - name: external
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    app: schemaregistry
    clusterId: confluent
    confluent-platform: "true"
    type: schemaregistry
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: connect
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: connect
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: connect-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: connect
    type: connect
    component: connect-bootstrap
spec:
  ports:
    - name: external
      port: 8083
      protocol: TCP
      targetPort: 8083
  selector:
    app: connect
    clusterId: confluent
    confluent-platform: "true"
    type: connect
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    platform.confluent.io/cr-name: ksqldb
    platform.confluent.io/namespace: confluent
    platform.confluent.io/type: ksqldb
    prometheus.io/port: "7778"
    prometheus.io/scrape: "true"
  name: ksqldb-bootstrap
  namespace: confluent
  labels:
    confluent-platform: "true"
    cr-name: ksqldb
    type: ksqldb
    component: ksqldb-bootstrap
spec:
  ports:
    - name: external
      port: 8088
      protocol: TCP
      targetPort: 8088
  selector:
    app: ksqldb
    clusterId: confluent
    confluent-platform: "true"
    type: ksqldb
  sessionAffinity: None
  type: ClusterIP
